--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "babel-preset-react-app": "3",
     "eslint": "^8.4.1",
     "eslint-plugin-react": "^7.27.1",
+    "parcel": "^2.0.1",
     "prettier": "^2.5.1"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "scripts": {
+    "start": "parcel"
   }
 }
